# weather-app-assignment

./: Dockerfile-app  Dockerfile-consumer  Dockerfile-producer  Dockerfile-table  README.md  docker-compose.yml  pyproject.toml
tests/: test.json
weather_app/: constants.py  consumer.py  create_table.py  main.py  producer.py  setup_consumer_spark.py  setup_producer.py
